<resources>
    <string name="app_name">Chhota Udepur</string>

    <string name="AppBar_title1">NAGAR SEVA SADAN</string>
    <string name="AppBar_title2">CHHOTA UDEPUR</string>

    <string name="dummy">Department of Agriculture and Cooperation: Apply for Technical Assistant and Senior Technical posts:</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>

    <string name="aboutchhotaudepur">ABOUT CHHOTA UDEPUR</string>
    <string name="achievement">ACHIEVEMENT</string>
    <string name="currentJob">CURRENT JOBS</string>
    <string name="jobFound">10 jobs found</string>
    <string name="news">NEWS AND UPDATES</string>
    <string name="complaint">COMPLAINTS REGISTRATION</string>
    <string name="info">INFORMATION</string>
    <string name="desc_hint">Describe Complaint</string>
    <string name="personalInfo">PERSONAL INFORMATION</string>
    <string name="name_hint">Full Name</string>
    <string name="addr_hint">Address</string>
    <string name="pincode_hint">Area Pincode</string>
    <string name="mobile_hint">Mobile</string>
    <string name="Email_hint">Email</string>
    <string name="submit">SUBMIT</string>
    <string name="upload">UPLOAD IMAGE</string>
    <string name="check_status">CHECK STATUS</string>
    <string name="clear">CLEAR</string>
    <string name="newreg_hint">REGISTER NEW COMPLAINT</string>
    <string name="checkStatus_hint">Check Complaint Status</string>
    <string name="c_num_hint">Enter Your Complaint Number</string>
    <string name="alreadyreg">ALREADY REGISTERED</string>
    <string name="helpline">HELPLINES</string>
    <string name="helplinesubtitle">HERE IS A LIST OF EMERGENCY NUMBERS THAT YOU MUST BE AWARE OF :</string>
    <string name="tender">ACTIVE TENDER</string>
    <string name="tenderrecord">80 RECORDS FOUND</string>
    <string name="tendertitle2">Click on each record for detailed information</string>

    <string name="aboutChhotaUdepur">The district consists of the six talukas of Chhota Udepur,
                Pavi Jetpur, Kawant, Naswadi, Sankheda and the newly created Bodeli taluka.
                The district headquarters is located at Chhota Udepur.
                The district was created to facilitate decentralisation and ease of access to government services.
                Its creation, announced in the run up to the Assembly elections in Gujarat in 2012,
                was also seen by the media and political analysts as a government strategy to attract tribal votes.
                Chhota Udaipur is a tribal dominated district and the district headquarters is located 110 km away
                from Vadodara. It shares its borders with the state of Madhya Pradesh.
                Chhota Udepur is the third tribal dominated district in eastern Gujarat after the Narmada and Tapi districts.
                Chhota Udepur district has a forest area of 75,704 hectares and has deposits of dolomite,
                fluorite, granite and sand all of which are mined. The district is also home to a large dairy industry.
                The Rathwa tribals who live here produce the Pithora mural paintings by mixing colours with liquour
                and milk and then using it to depict intricate motifs and scenes on the walls of their village dwellings.</string>


    <string name="aboutus">ABOUT US</string>
    <string name="management">MANAGEMENT</string>
    <string name="complains">COMPLAINTS</string>
    <string name="achievements">ACHIVEMENTS</string>
    <string name="jobs">JOBS</string>
    <string name="tourist">TOURIST SPOTS</string>
    <string name="helplines">HELPLINES</string>
    <string name="tenders">TENDER</string>

    <string name="check_conn">Please Check Internet Connection</string>

    <string name="image_uploaded">Image Selected For Upload</string>
    <string name="remove_image">REMOVE IMAGE</string>
    <string name="complain_type_spinner">Select Complain Category Type</string>
    <string name="complain_category_spinner">Select Complain Category</string>
    <string name="complain_ward_spinner">Select Ward No.</string>
    <string name="Dialog_complaincode">Complain Code</string>
    <string name="Dialog_title">Complain Registered Successfully</string>
    <string name="Dialog_text">Please Note Down Your Complain Code To Check Status: </string>
    <string name="Dialog_btnOk">OK</string>
    <string name="DialogMsg">Please Wait</string>

    <string name="DialogMsg2">Loading...</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="alert_msg">Are you sure want to call this Number?</string>

    <!--// GCM PROJECT ID-->
    <string name="project_id">394712556203</string>
    <string name="gcm_error">Google Services Not Found. Please Install/Update It</string>
    <string name="google_app_id">394712556203</string>

    <string name="dialog_wait">Please Wait while connecting to ChhotaUdepur</string>
    <string name="dialog_CheckInternet">Please check Internet connection</string>
</resources>
