<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <include
        android:id="@+id/footer"
        layout="@layout/footer_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:layout_below="@id/toolbar"
        android:layout_above="@id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/complaint"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="@dimen/std_margin"
            android:background="@drawable/line_linear" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_margin"
            android:gravity="center"
            android:text="@string/alreadyreg"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtComplaintNo"
            style="@style/EdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/c_num_hint"
            android:maxLength="10" />

        <TextView
            android:id="@+id/edtComplainstatus"
            style="@style/EdittextStyle"
            android:visibility="gone"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30" />

        <TextView
            android:id="@+id/edtComplainRemark"
            style="@style/EdittextStyle"
            android:visibility="gone"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_margin"
            android:layout_marginLeft="@dimen/btn_margin"
            android:layout_marginRight="@dimen/btn_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:weightSum="2"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnClear"
                android:layout_width="0sp"
                android:layout_height="@dimen/btn_margin"
                android:layout_marginRight="@dimen/std1_half_margin"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/clear" />

            <Button
                android:id="@+id/btnCheckStatus"
                android:layout_width="0sp"
                android:layout_height="@dimen/btn_margin"
                android:layout_marginLeft="@dimen/std1_half_margin"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/check_status" />

        </LinearLayout>


        <Button
            android:id="@+id/edtRegNew"
            style="@style/EdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_margin"
            android:gravity="center"
            android:text="@string/newreg_hint" />

    </LinearLayout>
</RelativeLayout>